[project]
name = "zero2json"
description = "ZeroPrompt integration for FLUX2-JSON providing deterministic, profile-based procedural text generation for structured prompt building."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["xxhash>=3.0.0"]

[project.urls]
Repository = "https://github.com/MushroomFleet/ComfyUI-Zero2JSON"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/MushroomFleet/ComfyUI-Zero2JSON/wiki"
"Bug Tracker" = "https://github.com/MushroomFleet/ComfyUI-Zero2JSON/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Zero2JSON"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

